# horizon

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  TODO.md  add_new_project.py  compile_shader.sh  temp_script.py
assets/models/: teapot.obj.bvh
assets/shaders/: simple_shader.frag  simple_shader.vert
assets/shaders/app/: common.slang  debug_shade_color.slang  frag.slang  random.slang  raygen.slang  raytrace.slang  raytracer.slang  shade.slang  trace.slang  vert.slang  write_indirect_dispatch.slang
assets/shaders/application/: test.slang
assets/shaders/bindless/: bindless.slang  frag.slang  vert.slang
assets/shaders/bindless_manager/: frag.slang  test.slang  vert.slang
assets/shaders/bindless_test/: frag.slang
assets/shaders/bvh_test_gpu/: test_aabb.slang  test_node.slang  test_triangle.slang
assets/shaders/diffuse_only/: glsl.frag  glsl.vert
assets/shaders/directional_light/: glsl.frag  glsl.vert
assets/shaders/example_1/: frag.slang  vert.slang
assets/shaders/includes/: bvh.slang  colors.glsl  common.slang  my_types.slang  random.slang  ray.slang  raytracing_functions.glsl  raytracing_structs.glsl  shape.slang  triangle.slang
assets/shaders/non_bindless/: frag.slang  vert.slang
assets/shaders/ppm_viewer/: frag.slang  glsl.vert  vert.slang
assets/shaders/predepth/: glsl.vert
assets/shaders/raytracing/: clear.slang  debug_shade_heatmap_node_intersections.slang  debug_shade_heatmap_primitive_intersections.slang  frag.slang  glsl.frag  raygen.slang  raytrace_core.slang  raytracing.slang  test_comp.slang  vert.slang
assets/shaders/rtiw/: comp.slang
assets/shaders/rtiw2/: clear.slang  raytracing.slang
assets/shaders/swapchain/: present_to_swapchain.frag
assets/shaders/test/: test.slang
assets/shaders/test_compute/: glsl.comp  test.comp
assets/shaders/test_model/: glsl.vert
examples/: CMakeLists.txt
examples/app/: CMakeLists.txt  camera.cpp  camera.hpp  main.cpp  renderer.cpp  renderer.hpp
examples/bindless/: CMakeLists.txt  main.cpp
examples/bvh/: CMakeLists.txt  bvh.cpp  bvh.hpp  image.hpp  main.cpp
examples/bvh_test/: CMakeLists.txt  main.cpp
examples/bvh_test_gpu/: CMakeLists.txt  main.cpp
examples/chip-8/: CMakeLists.txt  chip-8.hpp  main.cpp  renderer.hpp
examples/example_0/: CMakeLists.txt  main.cpp
examples/example_1/: CMakeLists.txt  main.cpp
examples/radix_sort/: CMakeLists.txt
examples/raytracing/: CMakeLists.txt  main.cpp
examples/rendergraph/: CMakeLists.txt  main.cpp
examples/rendergraph/shaders/: example.slang
examples/sparse_sets/: CMakeLists.txt  main.cpp
examples/test/: CMakeLists.txt  main.cpp
horizon/: CMakeLists.txt  test.cpp  test.hpp
horizon/core/: aabb.cpp  aabb.hpp  algebra.hpp  bvh.cpp  bvh.hpp  components.cpp  components.hpp  core.cpp  core.hpp  ecs.hpp  event.hpp  log.cpp  log.hpp  logger.cpp  model.cpp  model.hpp  random.cpp  random.hpp  window.cpp  window.hpp
horizon/gfx/: base_renderer.cpp  base_renderer.hpp  bindless_manager.cpp  bindless_manager.hpp  context.cpp  context.hpp  helper.cpp  helper.hpp  new_context.cpp  new_context.hpp  renderer.cpp  renderer.hpp
include/horizon/core/: aabb.hpp  bvh.hpp  components.hpp  core.hpp  ecs.hpp  (+4 more)
includes/horizon/: test.hpp
projects/: CMakeLists.txt
projects/application/: CMakeLists.txt  app.cpp  app.hpp  component_types.hpp  event_types.hpp  main.cpp  panel.hpp  renderer.hpp  runtime.hpp  utility.hpp
projects/basic/: CMakeLists.txt  main.cpp  utility.hpp
projects/bindless_manager/: CMakeLists.txt  main.cpp
projects/bindless_test/: CMakeLists.txt  main.cpp
projects/diffuse/: CMakeLists.txt  main.cpp  utility.hpp
projects/idk_test/: CMakeLists.txt  main.cpp
projects/load_image_test/: CMakeLists.txt  main.cpp  utility.hpp
projects/matrix_test/: CMakeLists.txt  main.cpp  test.slang
projects/my_bvh/: CMakeLists.txt  bvh.hpp  display.hpp  main.cpp  new_bvh.cpp  new_bvh.hpp
projects/new_raytracing/: CMakeLists.txt  bvh.hpp  main.cpp
projects/new_test/: CMakeLists.txt  main.cpp
projects/non_bindless_test/: CMakeLists.txt  main.cpp
projects/ppm_viewer/: CMakeLists.txt  filewatcher.hpp  main.cpp
projects/raytracing/: CMakeLists.txt  bvh.cpp  bvh.hpp  main.cpp  new_bvh.hpp  utility.hpp
projects/rt_debug/: CMakeLists.txt  bvh.hpp  main.cpp  utility.hpp
projects/rtiw/: CMakeLists.txt  main.cpp
projects/rtiw2/: CMakeLists.txt  main.cpp  renderer.hpp  utility.hpp
projects/something/: CMakeLists.txt  editor_camera.cpp  editor_camera.hpp  main.cpp  renderer.cpp  renderer.hpp  rendergraph.hpp  utility.hpp
projects/test/: CMakeLists.txt  main.cpp
projects/test_compute/: CMakeLists.txt  main.cpp
projects/test_model_loading/: CMakeLists.txt  main.cpp  rendergraph.cpp
projects/test_rt/: CMakeLists.txt  bvh.cpp  display.cpp  main.cpp
projects/test_something/: CMakeLists.txt  bvh.cpp  bvh.hpp  main.cpp
projects/testing_renderer/: CMakeLists.txt  main.cpp
projects/testing_renderer2/: CMakeLists.txt  main.cpp
projects/testing_rendergraph/: CMakeLists.txt  main.cpp  rendergraph.cpp  rendergraph.hpp
projects/visibility_buffer_example/: CMakeLists.txt  main.cpp  renderer.hpp
scripts/: configure.sh
shaders/: simple_shader.frag  simple_shader.vert
src/: CMakeLists.txt  first_app.cpp  first_app.h  horizon_camera.cpp  horizon_camera.h  horizon_clock.h  horizon_core.h  horizon_debug.h  horizon_device.cpp  horizon_device.h  horizon_ecs.h  horizon_events.h  horizon_game_object.cpp  horizon_game_object.h  horizon_model.cpp  horizon_model.h  horizon_pipeline.cpp  horizon_pipeline.h  horizon_renderer.cpp  horizon_renderer.h  horizon_swapchain.cpp  horizon_swapchain.h  horizon_utils.cpp  horizon_utils.h  horizon_window.cpp  horizon_window.h  main.cpp  simple_render_system.cpp  simple_render_system.h  test.cpp
src/core/: aabb.cpp  bvh.cpp  components.cpp  core.cpp  logger.cpp  model.cpp  stb_image.cpp  window.cpp
src/gfx/: base.cpp  context.cpp  helper.cpp  rendergraph.cpp
src/systems/: keyboard_movement_controller.cpp  keyboard_movement_controller.h  simple_render_system.cpp  simple_render_system.h
(+29 files in other folders)
