cmake_minimum_required(VERSION 3.10)    

project(projects)

add_subdirectory(test)
add_subdirectory(test_model_loading)
add_subdirectory(testing_renderer)
add_subdirectory(testing_rendergraph)
add_subdirectory(something)
# add_subdirectory(test_circle)
add_subdirectory(test_compute)
add_subdirectory(diffuse)
add_subdirectory(load_image_test)