cmake_minimum_required(VERSION 3.10)    

project(projects)

add_subdirectory(something)
add_subdirectory(diffuse)
add_subdirectory(test_something)
add_subdirectory(test_rt)
add_subdirectory(rt_debug)
add_subdirectory(raytracing)
add_subdirectory(new_raytracing)
add_subdirectory(my_bvh)
add_subdirectory(basic)
add_subdirectory(ppm_viewer)