cmake_minimum_required(VERSION 3.10)    

project(projects)

add_subdirectory(diffuse)
add_subdirectory(raytracing)
add_subdirectory(basic)
add_subdirectory(ppm_viewer)
add_subdirectory(matrix_test)
add_subdirectory(rtiw)
add_subdirectory(application)
add_subdirectory(rtiw2)
add_subdirectory(bindless_test)